add console for mzkit app

--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -238,6 +238,10 @@
     <Compile Include="pages\dockWindow\frmPlotViewer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\terminal\AppContainer.Designer.vb" />
+    <Compile Include="pages\dockWindow\terminal\AppContainer.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="pages\PlotTooltip.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -442,6 +446,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="RibbonItems.Designer.vb" />
+    <Compile Include="Win32API.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="forms\frmLicense.resx">
