removes conemu reference

--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -169,6 +169,9 @@
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic.Windows.Forms.Console">
+      <HintPath>..\dist\Microsoft.VisualBasic.Windows.Forms.Console.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.TextEdit">
       <HintPath>..\dist\Microsoft.VisualStudio.TextEdit.dll</HintPath>
     </Reference>
@@ -186,9 +189,6 @@
       <HintPath>..\dist\System.Runtime.InteropServices.APIs.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Forms.ConsoleEmulator">
-      <HintPath>..\dist\System.Windows.Forms.ConsoleEmulator.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Windows.Forms.TabControl">
       <HintPath>..\dist\System.Windows.Forms.TabControl.dll</HintPath>
@@ -249,7 +249,6 @@
     <Compile Include="pages\dockWindow\documents\frmPlotViewer.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="pages\dockWindow\R\GuiMacro.vb" />
     <Compile Include="pages\toolkit\PlotTooltip.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -684,7 +683,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="Resources\RE4As8m.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -719,11 +717,4 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets'))" />
-  </Target>
-  <Import Project="..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets" Condition="Exists('..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets')" />
 </Project>
