--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -293,6 +293,12 @@
     <Compile Include="pages\dockWindow\documents\frmPlotViewer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\DummyOutputWindow.Designer.vb">
+      <DependentUpon>DummyOutputWindow.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\DummyOutputWindow.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\explorer\frmRawFeaturesList.Designer.vb">
       <DependentUpon>frmRawFeaturesList.vb</DependentUpon>
     </Compile>
@@ -305,6 +311,12 @@
     <Compile Include="pages\dockWindow\explorer\frmFileExplorer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\PropertyWindow.designer.vb">
+      <DependentUpon>PropertyWindow.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\PropertyWindow.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\toolkit\PlotTooltip.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -312,11 +324,6 @@
     <Compile Include="pages\contextMenu\ExportData.vb">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="pages\dockWindow\DummyOutputWindow.Designer.vb" />
-    <Compile Include="pages\dockWindow\DummyOutputWindow.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="pages\dockWindow\DummyPropertyWindow.Designer.vb" />
     <Compile Include="pages\dockWindow\explorer\Win7StyleTreeView.Designer.vb">
       <DependentUpon>Win7StyleTreeView.vb</DependentUpon>
     </Compile>
@@ -351,9 +358,6 @@
       <DependentUpon>frmDockDocument.vb</DependentUpon>
     </Compile>
     <Compile Include="pages\dockWindow\frmDockDocument.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="pages\dockWindow\PropertyWindow.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\base\ToolWindow.Designer.vb" />
@@ -500,7 +504,6 @@
     <EmbeddedResource Include="pages\dockWindow\documents\frmRScriptEdit.resx">
       <DependentUpon>frmRScriptEdit.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="pages\dockWindow\DummyPropertyWindow.resx" />
     <EmbeddedResource Include="pages\dockWindow\documents\frmPlotViewer.resx">
       <DependentUpon>frmPlotViewer.vb</DependentUpon>
     </EmbeddedResource>
@@ -512,6 +515,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmSettings.resx">
       <DependentUpon>frmSettings.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\PropertyWindow.resx">
+      <DependentUpon>PropertyWindow.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\R\frmRsharp.resx">
       <DependentUpon>frmRsharp.vb</DependentUpon>
